--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -1,3 +1,13 @@
+/* For this first exercise,
+simply edit the style.css file so that the divs look like the image below.
+
+- [] Only edit the CSS where instructed in the file. 
+
+- [] You should only have to change the values of the margin and padding for this exercise. 
+
+- [] You should not have to add or remove properties in the CSS,
+or touch the HTML. */
+
 body {
   max-width: 600px;
   margin: 0 auto;
@@ -7,15 +17,15 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding: 32px;
+  margin: 12px;
 }
 
 .two {
   background: lightblue;
   border: 3px solid purple;
   /* CHANGE ME */
-  margin-bottom: 0px;
+  margin-bottom: 50px;
 }
 
 .three {
@@ -23,6 +33,6 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 32px;
+  margin-left: auto;
 }
