--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,8 +1,23 @@
+/* 
+
+
+- There is an 8px gap between each of the blue sections inside the card. 
+
+ - There are 8px between the title text and the edge of the title section. 
+
+
+*/
+
+
 body {
   background: #eee;
   font-family: sans-serif;
 }
 
+
+/* 
+- BUTTON 8px padding.
+*/
 .button,
 .button-container,
 .card {
@@ -19,12 +34,24 @@ body {
   background: #e3f4ff;
 }
 
+
+/* 
+- The title of the card uses a 16px font.
+*/
 .title {
   font-size: 16px;
   margin-bottom: 8px;
   padding: 10px;
 }
 
+
+/* 
+- There's 8px between the edge of card & its content (the blue sections).
+
+- The content section has 16px space on the top and bottom,
+and 8px on either side.
+
+*/
 .content {
   margin-bottom: 8px;
   /* רווח בין התוכן לבוקס מתחת */
@@ -33,12 +60,21 @@ body {
 
 }
 
+
+
+/*
+
+- The Big Button is centered on its own line. 
+- Everything inside the `.button-container` section is centered,
+and there is 8px padding.
+*/
 .button-container {
   text-align: center;
   /* מרכוז מלל!!!!! */
-
 }
 
+/* - The Big Button has 24px space on the sides,
+and 8px on top and bottom. */
 button {
   background: white;
   display: block;
