--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,4 +1,11 @@
+/* This one is simple,
+but it's something that you' ll want to do ALL THE TIME. Might as well get it out of the way now. All you need to do is center the red div inside the blue container. */
+
+
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
