--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,22 +1,36 @@
-.header  {
+/* זה כמו האבא המיכל של כולם....לא הכותרת */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  /* flex-basis: 1; */
 }
 
 ul {
   /* this removes the dots on the list items*/
+  display: flex;
   list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  /* מוסיף רווח בין כל פריט */
+  gap: 10px;
 }
 
+/* האות a מתייחסת לכל הקישורים.... */
 a {
+
   font-size: 22px;
   background: white;
   padding: 8px;
