--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -11,15 +11,21 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .1);
+  /* below my additions */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, .5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+
 }
 
 .logo {
@@ -35,14 +41,28 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  /* below addition */
+
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  display: block;
 }
 
 ul {
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+
+}
+
+.left,
+.right,
+.links {
+  display: flex;
+  align-items: center;
+  gap: 18px;
 }
