--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -19,7 +20,12 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
+  /* my */
+  display: block;
+  padding: 10px;
+  gap: 10px;
+
 }
 
 .icon {
@@ -66,4 +72,29 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/* my additions */
+.top {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+
+}
+
+.left {
+  margin: auto;
+}
+
+.middle {
+  display: block;
+}
+
+.bottom {
+  margin-top: 20px;
+}
+
+.header {
+  font-weight: 900;
 }
