--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,11 +21,11 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
-  /* my */
-  display: block;
-  padding: 10px;
-  gap: 10px;
 
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px;
 }
 
 .icon {
@@ -39,6 +39,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -54,6 +56,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
 
 button {
@@ -74,27 +77,22 @@ button.cancel {
   color: royalblue;
 }
 
-/* my additions */
-.top {
+.container {
   display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
   gap: 15px;
-
-}
-
-.left {
-  margin: auto;
-}
-
-.middle {
-  display: block;
+  align-items: center;
 }
 
 .bottom {
-  margin-top: 20px;
+  display: inline;
 }
 
 .header {
   font-weight: 900;
+  font-size: large;
+}
+
+.text,
+.bottom {
+  margin-left: 55px;
 }
