--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,14 +1,18 @@
 body,
 html {
-  height: 100%;
   margin: 0;
+  min-height: 100vh;
 }
 
 .container {
+  display: grid;
   text-align: center;
-  height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  /* My addition */
+  grid-template: 200px 200px 200px 200px / 200px 200px;
+  gap: 15px;
+  min-height: 100vh;
 }
 
 .container div {
@@ -22,10 +26,11 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: 1 / 1 / 1 / 3;
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #005b94;
 }
 
 .nav {
@@ -33,11 +38,12 @@ html {
 }
 
 .article {
-  background-color: #7E1DC3;
+  background-color: #7e1dc3;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 5 / 1 / 6 / 3;
 }
 
 .article p {
