--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,18 +1,17 @@
 body,
 html {
+  height: 100%;
   margin: 0;
-  min-height: 100vh;
 }
 
 .container {
-  display: grid;
   text-align: center;
+  height: 100%;
   padding: 16px;
-  box-sizing: border-box;
-  /* My addition */
-  grid-template: 200px 200px 200px 200px / 200px 200px;
+  /* box-sizing: border-box; */
+  display: grid;
   gap: 15px;
-  min-height: 100vh;
+  grid-template: 100px 100px 500px 100px / 300px 900px;
 }
 
 .container div {
@@ -26,11 +25,12 @@ html {
 
 .header {
   background-color: #006157;
-  grid-area: 1 / 1 / 1 / 3;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #005b94;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -43,7 +43,7 @@ html {
 
 .footer {
   background-color: #393f4d;
-  grid-area: 5 / 1 / 6 / 3;
+  grid-column: 1 / 3;
 }
 
 .article p {
