--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -4,7 +4,18 @@ html {
   margin: 0;
 }
 
+/* 4 rows 2 columns */
+
 .container {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  /* grid-template-areas:
+    "h h"
+    "s n"
+    "s a"
+    "f f"; */
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -22,20 +33,26 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / 3;
+  grid-column: 1 / -1;
+  /* grid-area: h; */
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #005b94;
   grid-row: 2 / 4;
+  /* grid-area: s; */
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / -1;
+  /* grid-area: n; */
 }
 
 .article {
-  background-color: #7E1DC3;
+  background-color: #7e1dc3;
+  grid-column: 2 / -1;
+  /* grid-area: a; */
 }
 
 .article p {
@@ -47,5 +64,6 @@ html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1 / -1;
+  /* grid-area: f; */
 }
