--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,12 +4,11 @@
 }
 
 .container {
-  text-align: center;
+  /* text-align: center; */
   display: grid;
   gap: 4px;
   grid-template-columns: 1fr 4fr;
-  /* grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)); */
-  grid-template-rows: 1fr 1fr 3fr 3fr 3fr 1fr;
+  grid-template-rows: 1fr 0.5fr 3fr 3fr 3fr 1fr;
   grid-template-areas:
     "h h h h h h h h h h h h"
     "s n n n n n n n n n n n"
@@ -29,29 +28,54 @@
 
 .header {
   background-color: #393f4d;
-  display: inline-grid;
-  /* grid-template-columns: 7fr 1fr 1fr 1fr 1fr; */
+  display: grid;
   grid-area: h;
-  grid-template-columns: auto 1fr;
-  align-items: center;
 }
 
-.menu ul,
-.menu li {
+.menu {
   font-size: 16px;
   display: grid;
-  grid-auto-flow: column;
-  justify-content: right;
+  grid-template-columns: repeat(5, 1fr);
+  align-self: center;
+  grid-column: 2 / 6;
+}
+
+.menu ul {
+  font-size: 16px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-self: center;
+  grid-column: 2 / 6;
+}
+
+.nav {
+  background-color: #c50208;
+  display: grid;
+  grid-area: n;
+  align-items: center;
+  grid-row: 2 / 2;
+}
+
+.nav ul {
+  display: grid;
+  font-size: 16px;
+  text-transform: uppercase;
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-auto-flow: column; */
+}
+
+.nav li {
+  text-align: center;
 }
 
 .sidebar {
   background-color: #c50208;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 2 / 4;
   gap: 50px;
   padding: 1px;
   grid-area: s;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .sidebar .photo {
@@ -66,33 +90,20 @@
 }
 
 .sidebar .side-content {
+  display: grid;
   background-color: white;
   color: black;
-  font-size: 16px;
+  font-size: 0.8 rem;
   font-weight: normal;
-  /* align-items: center; */
   text-align: center;
-  /* align-self: center; */
-}
-
-.nav {
-  background-color: #c50208;
-  display: grid;
-  grid-area: n;
-}
-
-.nav ul li {
-  display: grid;
-  font-size: 16px;
-  text-transform: uppercase;
-  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
 }
 
 .article {
   display: grid;
   background-color: #bccbde;
   grid-area: a;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   /* grid-template-rows: repeat(3, 1fr); */
   gap: 15px;
 }
@@ -114,7 +125,7 @@
 .card p {
   color: black;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .card .title {
@@ -134,4 +145,5 @@
 
 ul {
   list-style: none;
+  display: inline-block;
 }
